todo_app/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-deployment
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: todo-app-volume
          persistentVolumeClaim:
            claimName: todo-app-claim
        - name: todo-app-config
          configMap:
            name: todo-app-config-map
      containers:
        - name: todo-server
          image: javiercoronadonarvaez/todo-server:v3.0.2
          volumeMounts:
            - name: todo-app-volume
              mountPath: /usr/src/app/files
            - name: todo-app-config
              mountPath: /usr/src/app/config
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
        - name: todo-frontend
          image: javiercoronadonarvaez/todo-frontend:v1.2.4
          volumeMounts:
            - name: todo-app-volume
              mountPath: /usr/src/app/files
            - name: todo-app-config
              mountPath: /usr/src/app/config
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
