todo_app/k8s/statefulset-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
spec:
  selector:
    app: ping-pong-app
  ports:
    - name: db
      port: 5432
      protocol: TCP
      targetPort: 5432

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ping-pong-ss
spec:
  serviceName: ping-pong-svc
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong-app
  template:
    metadata:
      labels:
        app: ping-pong-app
    spec:
      containers:
        - name: postgres
          image: postgres:18
          ports:
            - name: db
              containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ['ReadWriteOnce']
        storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
